style: translation for next project button

--- a/public/assets/i18n/de.json
+++ b/public/assets/i18n/de.json
@@ -50,7 +50,8 @@
     "dialog": {
       "question": "Was macht dieses Projekt aus?",
       "github": "GitHub",
-      "liveTest": "Live-Demo"
+      "liveTest": "Live-Demo",
+      "nextProject": "Nächstes Projekt"
     },
     "pokedex": {
       "title": "Pokedex",
