--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -50,7 +50,8 @@
     "dialog": {
       "question": "What is this project about?",
       "github": "GitHub",
-      "liveTest": "Live Test"
+      "liveTest": "Live Test",
+      "nextProject": "Next project"
     },
     "pokedex": {
       "title": "Pokedex",
