--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -158,26 +158,75 @@
   "privacyPolicy": {
     "title": "Privacy Policy",
     "sections": {
-      "dataProtection": {
-        "title": "Data Protection",
-        "text": "This is a placeholder for the privacy policy content. Here you will find information about how we collect, use, and protect your personal data."
+      "responsible": {
+        "title": "1. Controller",
+        "name": "Daniel Luzius",
+        "address": "Hauptstraße 125",
+        "city": "63500 Seligenstadt",
+        "country": "Germany",
+        "email": "Email: kontakt@danielluzius.de"
       },
-      "informationCollection": {
-        "title": "Information Collection",
-        "text": "Placeholder text for information about what data we collect and how we use it."
+      "generalInformation": {
+        "title": "2. General Information",
+        "text": "I take the protection of your personal data seriously. Your data is handled confidentially and in accordance with the applicable data protection laws, including the EU General Data Protection Regulation (GDPR) and the German Federal Data Protection Act (BDSG). This Privacy Policy explains what personal data is collected, how it is used, and your rights in relation to it."
       },
-      "dataSecurity": {
-        "title": "Data Security",
-        "text": "Placeholder text for information about how we secure your data and protect your privacy."
+      "hosting": {
+        "title": "3. Hosting",
+        "text": "This website is hosted by ALL-INKL.COM – Neue Medien Münnich, Hauptstraße 68, 02742 Friedersdorf, Germany. ALL-INKL processes data such as server log files to ensure stable and secure website operation. The legal basis for this is Article 6(1)(f) GDPR (legitimate interest in secure website operation)."
+      },
+      "dataCollection": {
+        "title": "4. Data Collection and Processing",
+        "intro": "When visiting this website, your browser automatically transmits certain information:",
+        "items": {
+          "browserType": "Browser type and version",
+          "operatingSystem": "Operating system",
+          "referrerUrl": "Referrer URL",
+          "hostname": "Hostname of the accessing device",
+          "requestTime": "Time of the server request",
+          "ipAddress": "IP address"
+        },
+        "outro": "This data is not combined with other data sources and is deleted after no more than seven days. The processing is based on Article 6(1)(f) GDPR (legitimate interest in the functionality and security of the website)."
+      },
+      "contactForm": {
+        "title": "5. Contact Form",
+        "text": "If you contact me via the contact form, the data you enter (name, email address, message) will be processed to handle your request. The form is operated via EmailJS (EmailJS Ltd, 9 Appold St, London EC2A 2AP, United Kingdom).",
+        "emailjs": "EmailJS enables sending form data as an email message. The data is processed only for the purpose of transmitting your inquiry and temporarily stored.",
+        "legalBasis": "Legal basis: Article 6(1)(b) GDPR (performance of a contract or pre-contractual measures) and Article 6(1)(f) GDPR (legitimate interest in efficient communication). A Data Processing Agreement pursuant to Article 28 GDPR exists with EmailJS."
+      },
+      "linkedIn": {
+        "title": "6. LinkedIn Link",
+        "text": "This website may contain a link to LinkedIn (LinkedIn Ireland Unlimited Company, Wilton Place, Dublin 2, Ireland). When you click the LinkedIn icon, a direct connection to LinkedIn's servers is established, which may transmit personal data (e.g., IP address) to LinkedIn.",
+        "disclaimer": "I have no control over LinkedIn's data processing. For details, please refer to LinkedIn's privacy policy:",
+        "link": "https://www.linkedin.com/legal/privacy-policy"
+      },
+      "fonts": {
+        "title": "7. Fonts",
+        "text": "This website uses Google Fonts that are locally hosted. No connection to Google servers is established, and no personal data is transmitted to Google when loading the website."
       },
       "yourRights": {
-        "title": "Your Rights",
-        "text": "Placeholder text for information about your rights regarding your personal data."
+        "title": "8. Your Rights",
+        "intro": "You have the following rights under the GDPR:",
+        "items": {
+          "information": "Right of access (Article 15)",
+          "correction": "Right to rectification (Article 16)",
+          "deletion": "Right to erasure (Article 17)",
+          "restriction": "Right to restriction of processing (Article 18)",
+          "portability": "Right to data portability (Article 20)",
+          "objection": "Right to object (Article 21)"
+        },
+        "contact": "You may exercise these rights by contacting me at the email address above.",
+        "authority": "You also have the right to lodge a complaint with a supervisory authority, e.g.:",
+        "authorityName": "The Hessian Commissioner for Data Protection and Freedom of Information",
+        "authorityAddress": "P.O. Box 3163, 65021 Wiesbaden, Germany",
+        "authorityLink": "https://datenschutz.hessen.de"
       },
-      "contact": {
-        "title": "Contact",
-        "text": "For any questions regarding this privacy policy, please contact us at kontakt@danielluzius.de.",
-        "date": "Date: October 06, 2025"
+      "storage": {
+        "title": "9. Data Retention and Deletion",
+        "text": "Personal data will be deleted once the purpose of storage no longer applies or legal retention periods have expired."
+      },
+      "security": {
+        "title": "10. Security",
+        "text": "Appropriate technical and organisational measures are in place to protect your data against loss, manipulation, or unauthorised access. The connection to this website is secured using SSL/TLS encryption."
       }
     }
   }
